[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=hyperborea3"
testpaths = ["tests"]
markers = [
    "repeat: repeats a test n times",
]

[tool.mypy]
mypy_path = "hyperborea3"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
