[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperborea3"
description = "Character Generator plus other tools for the Hyperborea RPG, 3rd Edition"
readme = "README.md"
authors = [{name = "Jeremy Deram"}]
urls = {homepage = "https://github.com/jderam/hyperborea3"}
license = {file = "LICENSE"}
keywords = [
    "Dungeons",
    "Dragons",
    "Hyperborea",
    "Hyperborea3",
    "RPG",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-repeat",
    "mypy",
]
dev = [
    "fastapi",
    "ipython",
    "pre-commit",
    "uv-publish",
    "uvicorn",
]

[tool.hatch.version]
path = "hyperborea3/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["hyperborea3"]
exclude = ["hyperborea3/sample_data"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
addopts = "--cov=hyperborea3"
testpaths = ["tests"]
markers = [
    "repeat: repeats a test n times",
]

[tool.mypy]
mypy_path = "hyperborea3"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
