[metadata]
name = hyperborea3
version = attr: hyperborea3.__version__
description = Character Generator plus other tools for the Hyperborea RPG, 3rd Edition
long_description_content_type = text/markdown
long_description = file: README.md
author = Jeremy Deram
url = https://github.com/jderam/hyperborea3
license = MIT
license_file = LICENSE
keywords = Dungeons Dragons Hyperborea Hyperborea3 RPG
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8
include_package_data = True
zip_safe = True

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
hyperborea3 = py.typed

[flake8]
max-line-length = 88
